potato text improvement

--- a/content/blog/2019-02-28-potatoes-in-world-literature.Rmd
+++ b/content/blog/2019-02-28-potatoes-in-world-literature.Rmd
@@ -369,7 +369,9 @@ kable(align = c("l", "r", "r", "r"),
 Table \@ref(tab:100-plus-potatoes) shows the 10 genres with the most mentions of potatoes, provided there are 100 or more books in each genre. Reflective of the lasting impact of the Irish Potato Famine on literature and cultural memory, books about Ireland appear the most likely to mention potatoes. Farm life and country life are the next most common, again unsurprisingly.
 
 
-There are `r scales::comma(nrow(kwic_list))` mentions of potatoes across `r scales::comma(nrow(kwic_count))` books, an average of `r round( nrow(kwic_list)/nrow(kwic_count), 1)` per book. The book with the most mentions of potatoes, with `r top_n(ku_summary_book, 1, count)$count` in total, is _`r kwic_count$title[kwic_count$gutenberg_id == top_n(ku_summary_book, 1, count)$gutenberg_id]`_ by `r str_replace(kwic_count$author[kwic_count$gutenberg_id == top_n(ku_summary_book, 1, count)$gutenberg_id], "Fryer, ", "")` `r str_extract(kwic_count$author[kwic_count$gutenberg_id == top_n(ku_summary_book, 1, count)$gutenberg_id], ".*?,")` the full text of which is available [here](https://www.gutenberg.org/ebooks/38215). While I excluded cookbooks, this is a story with recipes from 1912, hence the many mentions of potatoes, and the author's description of her "book for all girls who love to help Mother."
+There are `r scales::comma(nrow(kwic_list))` mentions of potatoes across `r scales::comma(nrow(kwic_count))` books, an average of `r round( nrow(kwic_list)/nrow(kwic_count), 1)` per book mentioning potatoes. Across all English language fiction books, potatoes are mentioned an average of `r round(nrow(kwic_list)/nrow(subjects_lcsh_unique), 2)` times per book.
+
+The book with the most mentions of potatoes, with `r top_n(ku_summary_book, 1, count)$count` in total, is _`r kwic_count$title[kwic_count$gutenberg_id == top_n(ku_summary_book, 1, count)$gutenberg_id]`_ by `r str_replace(kwic_count$author[kwic_count$gutenberg_id == top_n(ku_summary_book, 1, count)$gutenberg_id], "Fryer, ", "")` `r str_extract(kwic_count$author[kwic_count$gutenberg_id == top_n(ku_summary_book, 1, count)$gutenberg_id], ".*?,")` the full text of which is available [here](https://www.gutenberg.org/ebooks/38215). While I excluded cookbooks, this is a story with recipes from 1912, hence the many mentions of potatoes, and the author's description of her "book for all girls who love to help Mother."
 
 There are far too many instances of potatoes mentioned in literature to show them all, but I have a sample of 1% of all mentions of potatoes, examples from `r round(0.01 * nrow(kwic_count), 0)` of the total `r scales::comma(nrow(kwic_count))` books with at least one mention of potatoes in Table \@ref(tab:data-table). You can download all the mentions of potatoes in context, along with subject data and Gutenberg catalogue number, in [this spreadsheet](/files/potato-kwic.csv).
 
