--- a/content/blog/2019-02-28-potatoes-in-world-literature.Rmd
+++ b/content/blog/2019-02-28-potatoes-in-world-literature.Rmd
@@ -369,7 +369,7 @@ kable(align = c("l", "r", "r", "r"),
 Table \@ref(tab:100-plus-potatoes) shows the 10 genres with the most mentions of potatoes, provided there are 100 or more books in each genre. Reflective of the lasting impact of the Irish Potato Famine on literature and cultural memory, books about Ireland appear the most likely to mention potatoes. Farm life and country life are the next most common, again unsurprisingly.
 
 
-There are `r scales::comma(nrow(kwic_list))` mentions of potatoes across `r scales::comma(nrow(kwic_count))` books, an average of `r round( nrow(kwic_list)/nrow(kwic_count), 1)` per book mentioning potatoes. Across all English language fiction books, potatoes are mentioned an average of `r round(nrow(kwic_list)/nrow(subjects_lcsh_unique), 2)` times per book.
+There are `r scales::comma(nrow(kwic_list))` mentions of potatoes across `r scales::comma(nrow(kwic_count))` books, an average of `r round( nrow(kwic_list)/nrow(kwic_count), 2)` per book mentioning potatoes. Across all English language fiction books, potatoes are mentioned an average of `r round(nrow(kwic_list)/nrow(subjects_lcsh_unique), 2)` times per book.
 
 The book with the most mentions of potatoes, with `r top_n(ku_summary_book, 1, count)$count` in total, is _`r kwic_count$title[kwic_count$gutenberg_id == top_n(ku_summary_book, 1, count)$gutenberg_id]`_ by `r str_replace(kwic_count$author[kwic_count$gutenberg_id == top_n(ku_summary_book, 1, count)$gutenberg_id], "Fryer, ", "")` `r str_extract(kwic_count$author[kwic_count$gutenberg_id == top_n(ku_summary_book, 1, count)$gutenberg_id], ".*?,")` the full text of which is available [here](https://www.gutenberg.org/ebooks/38215). While I excluded cookbooks, this is a story with recipes from 1912, hence the many mentions of potatoes, and the author's description of her "book for all girls who love to help Mother."
 
@@ -395,4 +395,4 @@ I would also be amiss not to include my favourite mention of potatoes in an othe
 > [The Irishman no longer knows any need now but the need to eat, and indeed only the need to eat _potatoes_ and _scabby potatoes_ at that, the worst kind of potatoes.](https://www.marxists.org/archive/marx/works/1844/manuscripts/needs.htm)
 
 
-_A big thank you to Jessie See for the encouragement that this ludicrous idea was actually worth doing. Code, as usual, is available on [Github](https://raw.githubusercontent.com/evanodell/evanodell.com/master/content/blog/2019-02-28-potatoes-in-world-literature.Rmd). Cover photo via the [Wikipedia page for the potato](https://en.wikipedia.org/wiki/Potato)._
+_A big thank you to Jessie See for the encouragement that this ludicrous idea was actually worth doing. Code, as usual, is available on [Github](https://raw.githubusercontent.com/evanodell/evanodell.com/master/content/blog/2019-02-28-potatoes-in-world-literature.Rmd). Cover photo via the [Wikipedia page for the potato](https://en.wikipedia.org/wiki/Potato). Plot created with [`ggplot2`](https://ggplot2.tidyverse.org/), KWIC table with [`quanteda`](https://quanteda.io/)._
