add link to docs

--- a/content/blog/2019-04-04-introducting-uk-police-rmd.Rmd
+++ b/content/blog/2019-04-04-introducting-uk-police-rmd.Rmd
@@ -81,4 +81,4 @@ map <- leaflet(options=leafletOptions(
 map
 ```
 
-
+Full documentation on the `ukpolice` package is available [here](https://docs.evanodell.com/ukpolice/).
